--- a/src/views/tela-busca/tela-busca.html
+++ b/src/views/tela-busca/tela-busca.html
@@ -12,8 +12,8 @@
   <title>Projeto IA</title>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="styles.css">
-  <script src="index.js"></script>
+  <link rel="stylesheet" href="tela-busca.css">
+  <script src="tela-busca.ts"></script>
 
 </head>
 
@@ -21,7 +21,7 @@
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand btn btn-light px-4 fw-semibold fs-5">
+      <a class="navbar-brand btn btn-light px-4 fw-semibold fs-5" href="./index.html">
         <i class="bi bi-arrow-left-circle-fill me-2"></i> Apresentação
       </a>
     </div>
@@ -306,10 +306,10 @@
           <a href="https://github.com/Joao-Tietbohl" target="_blank" style="text-decoration: none; color: inherit;">Joao Pedro Tietbohl</a>
           <i class="bi bi-github"></i>
         </div>
-        <!-- <div class="col-auto bg-black">
+        <div class="col-auto bg-black">
           <a href="https://github.com/LucasBleyer" target="_blank" style="text-decoration: none; color: inherit;">Lucas Bleyer</a>
           <i class="bi bi-github"></i>
-        </div> -->
+        </div>
         <div class="col-auto bg-black">
           <a href="https://github.com/PedrouNunes" target="_blank" style="text-decoration: none; color: inherit;">Pedro Henrique Nunes</a>
           <i class="bi bi-github"></i>
