--- a/src/views/tela-busca/tela-busca.html
+++ b/src/views/tela-busca/tela-busca.html
@@ -321,7 +321,7 @@
       </div>
       <div class="col-auto bg-black">
         <hr style="width: 100%;">
-        <p class="text-center text-s">&copy; 2023 Lages, IFSC</p>
+        <p class="text-center text-s">© 2023 Copyright | Todos os Direitos Reservados, IFSC Lages</p>
       </div>
     </div>
 
